# lulzcoin

./: .gitignore  LICENSE  README-ptbr.md  README.md
doc/: planejamento.org
doc/paper/: .gitignore  lulzcoin.tex
internetz/: .gitignore  Cargo.toml
internetz/src/: main.rs
internetz/src/wallet/: mod.rs
lulzd/: Cargo.toml
lulzd/src/: main.rs
lulzd/src/chain/: mod.rs
