[package]
name = "internetz"
version = "0.1.0"
authors = ["Lucas Vieira <lucasvieira@protonmail.com>"]
description = "Wallet client for lulzcoin"

[dependencies]
rustyline = "1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rust-crypto = "0.2.36"
rust-base58 = "0.0.4"
openssl = "0.9.21"
pem = "0.4"
rpassword = "1.0.0"
lazy_static = "1.0"
rand = "0.3"